--- a/app/src/main/res/layout/activity_credit.xml
+++ b/app/src/main/res/layout/activity_credit.xml
@@ -39,7 +39,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/card_yellow"
+                android:background="@drawable/card_text"
+                android:textColor="#ffffff"
+                android:padding="2dp"
                 android:text="春华秋实"
                 app:layout_constraintStart_toStartOf="@+id/textView23"
                 app:layout_constraintTop_toBottomOf="@+id/textView24" />
@@ -201,11 +203,11 @@
                 app:layout_constraintTop_toTopOf="@+id/textView10" />
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/september"
                 android:layout_width="130dp"
                 android:layout_height="120dp"
                 app:layout_constraintBottom_toBottomOf="@+id/august"
-                app:layout_constraintEnd_toEndOf="@+id/june"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/june"
                 app:layout_constraintTop_toTopOf="@+id/august"
                 app:srcCompat="@mipmap/september" />
@@ -214,7 +216,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="九月·榛荣"
-                app:layout_constraintEnd_toEndOf="@+id/imageView4"
+                app:layout_constraintEnd_toEndOf="@+id/september"
                 app:layout_constraintStart_toEndOf="@+id/august"
                 app:layout_constraintTop_toTopOf="@+id/textView11" />
 
@@ -263,7 +265,7 @@
                 android:layout_height="115dp"
                 android:background="@mipmap/december"
                 app:layout_constraintBottom_toBottomOf="@+id/november"
-                app:layout_constraintEnd_toEndOf="@+id/imageView4"
+                app:layout_constraintEnd_toEndOf="@+id/september"
                 app:layout_constraintStart_toEndOf="@+id/august"
                 app:layout_constraintTop_toTopOf="@+id/november" />
 
@@ -282,7 +284,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/card_yellow"
+                android:background="@drawable/card_text"
+                android:textColor="#ffffff"
+                android:padding="2dp"
                 android:text="文章阅读"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -350,7 +354,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/card_yellow"
+                android:background="@drawable/card_text"
+                android:textColor="#ffffff"
+                android:padding="2dp"
                 android:text="句子跟读"
                 app:layout_constraintEnd_toEndOf="@+id/textView18"
                 app:layout_constraintStart_toStartOf="@+id/textView18"
@@ -420,7 +426,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/card_yellow"
+                android:background="@drawable/card_text"
+                android:textColor="#ffffff"
+                android:padding="2dp"
                 android:text="学习打卡"
                 app:layout_constraintEnd_toEndOf="@+id/textView19"
                 app:layout_constraintStart_toStartOf="@+id/textView19"
