--- a/app/src/main/res/layout/activity_punch.xml
+++ b/app/src/main/res/layout/activity_punch.xml
@@ -56,5 +56,17 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
         app:srcCompat="@mipmap/text2" />
 
+    <TextView
+        android:id="@+id/punch_num"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:layout_marginTop="5dp"
+        android:textColor="#6BD19E"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintStart_toStartOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
