--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/bg2"
+    android:background="@mipmap/bg_s1"
+    android:alpha="0.6"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,6 +34,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="50dp"
             android:hint="请输入想要搜索的文章题目"
+            android:gravity="center"
             android:imeOptions="actionSearch"
             android:singleLine="true"
             android:textSize="15sp"
