--- a/app/src/main/res/layout/activity_text_page.xml
+++ b/app/src/main/res/layout/activity_text_page.xml
@@ -43,14 +43,11 @@
             android:layout_width="match_parent"
             android:layout_height="0dp">
 
-            <TextView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/article_content"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
-                android:text="TextView1235647897"
-                android:textColor="#000000"
-                android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/time" />
@@ -83,7 +80,7 @@
                 android:id="@+id/article_read"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
                 android:text="阅读数："
                 android:layout_marginEnd="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
