--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -21,7 +21,7 @@
         android:layout_height="90dp"
         android:layout_marginStart="30dp"
         app:layout_constraintHorizontal_bias="0"
-        android:background="@drawable/baseline_account_circle_24"
+        android:background="@mipmap/avatar"
         app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:text="历史记录"
+            android:text="排行榜"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/history_im"
             app:layout_constraintStart_toEndOf="@+id/history_im"
